# nchelpers

./: .travis.yml  CONTRIBUTORS.rst  Jenkinsfile  NEWS.rst  README.md  pyproject.toml  requirements.txt  setup.py  test.txt
.github/workflows/: pypi-publish.yml  python-ci.yml
nchelpers/: __init__.py  date_utils.py  decorators.py  exceptions.py  iteration.py  util.py
nchelpers/data/: ln_tiny_gcm.nc  tiny_aClim_gcm.nc  tiny_climdex_ds_gcm.nc  tiny_cmip6.nc  tiny_gridded_mClimSD_obs.nc  tiny_gridded_obs.nc  tiny_gridded_obs_missing_data.nc  tiny_hydromodel_obs.nc  tiny_mClim_gcm.nc  tiny_sClim_gcm.nc  tiny_seasonal.nc
tests/: conftest.py  test_CFDataset.py  test_date_utils.py  test_iteration.py  test_nchelpers_fns.py  test_util.py
tests/helpers/: nc_file_specs.py  time_values.py
