[tool.poetry]
name = "nchelpers"
version = "5.5.11"
description = "Helper classes and methods for Climate and Forecast NetCDF datasets"
authors = ["Rod Glover <rglover@uvic.ca>"]
license = "GPL-3.0"
readme = "README.md"
keywords = [
  "netcdf",
  "climate",
  "forecast",
  "nchelpers",
  "climate data",
  "climate science"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[[tool.poetry.packages]]
include = "nchelpers"

[[tool.poetry.include]]
path = "nchelpers/data/*.nc"
format = "wheel"

[[tool.poetry.include]]
path = "nchelpers/data/*.nc"
format = "sdist"

[[tool.poetry.source]]
name = "pcic"
url = "https://pypi.pacificclimate.org/simple/"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.12"
python-dateutil = "*"
netCDF4 = ">=1.5.4"
cached-property = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
