[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "nchelpers"
version = "6.0.0"
description = "Helper classes and methods for Climate and Forecast NetCDF datasets"
authors = [{ name = "Rod Glover", email = "rglover@uvic.ca" }]
license = { text = "GPL-3.0" }
readme = "README.md"
keywords = [
  "netcdf",
  "climate",
  "forecast",
  "nchelpers",
  "climate data",
  "climate science",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
  "python-dateutil>=2.9.0.post0,<3.0.0",
  "netCDF4>=1.7.2,<2.0.0",
  "cached-property>=2.0.1,<3.0.0",
  "pytest>=8.3.5,<9.0.0",
]

[project.urls]
homepage = "http://www.pacificclimate.org/"
repository = "https://github.com/pacificclimate/nchelpers"

[[tool.poetry.source]]
name = "pcic"
url = "https://pypi.pacificclimate.org/simple/"
priority = "primary"

[tool.pytest.ini_options]
markers = ["slow: marks tests that are slow (deselect with '-m \"not slow\"')"]

[[tool.poetry.include]]
path = "nchelpers/data/CanESM2-rcp85-tasmax-r1i1p1-2010-2039.nc"
format = ["sdist", "wheel"]

[[tool.poetry.include]]
path = "nchelpers/data/cgcm.nc"
format = ["sdist", "wheel"]

[[tool.poetry.include]]
path = "nchelpers/data/prism_pr_small.nc"
format = ["sdist", "wheel"]

[[tool.poetry.include]]
path = "nchelpers/data/tiny_gcm.nc"
format = ["sdist", "wheel"]

[[tool.poetry.include]]
path = "nchelpers/data/tiny_downscaled.nc"
format = ["sdist", "wheel"]

[[tool.poetry.include]]
path = "nchelpers/data/tiny_hydromodel_gcm.nc"
format = ["sdist", "wheel"]

[[tool.poetry.include]]
path = "nchelpers/data/tiny_mClim_gcm.nc"
format = ["sdist", "wheel"]

[[tool.poetry.include]]
path = "nchelpers/data/tiny_sClim_gcm.nc"
format = ["sdist", "wheel"]

[[tool.poetry.include]]
path = "nchelpers/data/tiny_aClim_gcm.nc"
format = ["sdist", "wheel"]

[[tool.poetry.include]]
path = "nchelpers/data/tiny_streamflow.nc"
format = ["sdist", "wheel"]
